	* src/PluginUtils/_ReportUtils.py: remove use of deprecated functions
	* src/plugins/DecendReport.py: remove use of deprecated functions
	* src/plugins/IndivComplete.py: remove use of deprecated functions
	* src/plugins/DetDescendantReport.py: remove use of deprecated functions
	* src/plugins/DetAncestralReport.py: remove use of deprecated functions
	* src/PluginUtils/_Plugins.py: remove statbox

2006-03-29  Don Allingham  <don@gramps-project.org>
	* src/Utils.py: provide launch function for spawning processes
	* src/DisplayTabs.py: fix import, move launch function
	* src/Editors/_EditPerson.py: Fix imports of EditMediaRef, remove
	specific edit image from top image window.
	* src/glade/gramps.glade: remove unused dialogs, replaced by 
	gtk.MessageDialog
	* src/AddMedia.py: clean up scale_image
	* src/Utils.py: replace fork() with spawn to prevent Xlib async errors
	* src/GrampsDisplay.py: replace fork() with spawn to prevent Xlib 
	async errors
	* src/QuestionDialog.py: Simply some dialogs by using gtk.MessageDialog
	* src/ImgManip.py: replace fork() with spawn to prevent Xlib async 
	errors
	* src/ViewManager.py: enable actiongroups if file loaded before
	the interface is initialized (command line or autoload)
	* src/SelectObject.py: Provide images in preview
	* src/DisplayTabs.py: Add support of SelectObject
	* src/GenericFilter.py: check for xml file before trying to parse
	* src/ListModel.py: image support in view

2006-03-28  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PlaceView.py: delete place properly
	* src/gramps_main.py: remove 2.0.X message
	* src/ViewManager.py: remove expanduser
	* src/Exporter.py: remove expanduser
	* src/plugins/BookReport.py: remove expanduser
	* src/plugins/Calendar.py: remove expanduser
	* src/plugins/GrampViz.py: remove expanduser
	* src/const.py.in: fix home dir.
	* src/PluginsUtils.py: remove expanduser
	* src/RecentFiles.py: remove expanduser

2006-03-28  Brian Matherly  <pez4brian@users.sourceforge.net>