@@ -7,6 +7,8 @@
 	* src/plugins/DetDescendantReport.py: remove use of deprecated functions
 	* src/plugins/DetAncestralReport.py: remove use of deprecated functions
 	* src/PluginUtils/_Plugins.py: remove statbox
+	* src/SubstKeywords.py: remove use of deprecated functions
+	* src/plugins/ various files: remove use of deprecated functions
 
 2006-03-29  Don Allingham  <don@gramps-project.org>
 	* src/Utils.py: provide launch function for spawning processes
